--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -23,7 +23,7 @@
     "build:definitions": "tsc -p tsconfig.build.json",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=pob-lcov-reporter --coverageDirectory=docs/coverage/",
-    "lint": "tsc && eslint --ext .ts src/",
+    "lint": "tsc && eslint --ext .ts --quiet src/",
     "test": "jest",
     "test:watch": "jest",
     "watch": "pob-watch"
@@ -53,16 +53,16 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@pob/eslint-config-babel": "29.1.0",
-    "@pob/eslint-config-babel-node": "29.1.0",
-    "@pob/eslint-config-typescript": "29.1.0",
+    "@pob/eslint-config-babel": "29.2.0",
+    "@pob/eslint-config-babel-node": "29.1.1",
+    "@pob/eslint-config-typescript": "29.2.0",
     "@types/jest": "24.0.11",
     "babel-jest": "24.7.1",
     "babel-preset-latest-node": "3.1.1",
     "eslint": "5.16.0",
     "jest": "24.7.1",
-    "pob-babel": "23.10.1",
-    "pob-lcov-reporter": "1.0.2",
+    "pob-babel": "23.12.0",
+    "pob-lcov-reporter": "1.1.0",
     "prettier": "1.16.4",
     "typescript": "3.4.1",
     "xunit-file": "1.0.0"
