--- a/packages/nightingale-example/package.json
+++ b/packages/nightingale-example/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "build": "pob-build",
     "build:definitions": "tsc -p tsconfig.build.json",
-    "lint": "tsc && eslint --ext .ts src/",
+    "lint": "tsc && eslint --ext .ts --quiet src/",
     "watch": "pob-watch"
   },
   "prettier": {
@@ -52,12 +52,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@pob/eslint-config-babel": "29.1.0",
-    "@pob/eslint-config-babel-node": "29.1.0",
-    "@pob/eslint-config-typescript": "29.1.0",
+    "@pob/eslint-config-babel": "29.2.0",
+    "@pob/eslint-config-babel-node": "29.1.1",
+    "@pob/eslint-config-typescript": "29.2.0",
     "babel-preset-latest-node": "3.1.1",
     "eslint": "5.16.0",
-    "pob-babel": "23.10.1",
+    "pob-babel": "23.12.0",
     "prettier": "1.16.4",
     "typescript": "3.4.1"
   }
