--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -34,7 +34,7 @@
     "generate:api": "typedoc --gitRevision master --out docs --tsconfig tsconfig.doc.json",
     "generate:docs": "rm -Rf docs ; yarn run generate:api ; touch docs/.nojekyll && yarn run generate:test-coverage",
     "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=pob-lcov-reporter --coverageDirectory=docs/coverage/",
-    "lint": "tsc && eslint --ext .ts src/",
+    "lint": "tsc && eslint --ext .ts --quiet src/",
     "test": "jest",
     "test:watch": "jest",
     "watch": "pob-watch"
@@ -64,8 +64,8 @@
   "devDependencies": {
     "@babel/core": "7.4.3",
     "@babel/preset-env": "7.4.3",
-    "@pob/eslint-config-babel": "29.1.0",
-    "@pob/eslint-config-typescript": "29.1.0",
+    "@pob/eslint-config-babel": "29.2.0",
+    "@pob/eslint-config-typescript": "29.2.0",
     "@types/jest": "24.0.11",
     "babel-jest": "24.7.1",
     "babel-preset-latest-node": "3.1.1",
@@ -73,8 +73,8 @@
     "eslint": "5.16.0",
     "eslint-plugin-prefer-class-properties": "1.0.0",
     "jest": "24.7.1",
-    "pob-babel": "23.10.1",
-    "pob-lcov-reporter": "1.0.2",
+    "pob-babel": "23.12.0",
+    "pob-lcov-reporter": "1.1.0",
     "prettier": "1.16.4",
     "typedoc": "0.14.2",
     "typescript": "3.4.1",
