--- a/packages/nightingale-types/package.json
+++ b/packages/nightingale-types/package.json
@@ -18,7 +18,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "build:definitions": "tsc --lib esnext --noEmit ./lib/index.d.ts",
-    "lint": "eslint lib/"
+    "lint": "eslint --quiet lib/"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -29,8 +29,8 @@
     "nightingale-levels": "^4.2.0"
   },
   "devDependencies": {
-    "@pob/eslint-config": "29.1.0",
-    "@pob/eslint-config-node": "29.1.0",
+    "@pob/eslint-config": "29.2.0",
+    "@pob/eslint-config-node": "29.1.1",
     "eslint": "5.16.0",
     "prettier": "1.16.4"
   }
