--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -14,7 +14,7 @@
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
-  "main": "./dist/index-node14.cjs.js",
+  "main": "./dist/index-node14.mjs",
   "exports": {
     "./package.json": "./package.json",
     ".": {
