--- a/packages/nightingale-debug/package.json
+++ b/packages/nightingale-debug/package.json
@@ -24,7 +24,7 @@
     "not safari < 10",
     "not ios_saf < 10"
   ],
-  "main": "./dist/index-node14.cjs.js",
+  "main": "./dist/index-node14.mjs",
   "types": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
   "browser": "./dist/index-browser.es.js",
