--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -18,7 +18,7 @@
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
-  "main": "./dist/index-node14.cjs.js",
+  "main": "./dist/index-node14.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
