--- a/packages/nightingale-example/tsconfig.json
+++ b/packages/nightingale-example/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    /* No emit in default config file. See build config file for config to build declaration files */
-    "noEmit": true,
+    "rootDir": "src",
+    "composite": true,
+    "incremental": true,
+    "noEmit": false,
+    "noEmitOnError": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "node_modules/.cache/tsc",
+    "tsBuildInfoFile": "node_modules/.cache/tsc/tsbuildinfo",
+
     /* No need to check .d.ts files */
     "skipLibCheck": true,
-
-    "rootDirs": ["src"],
 
     "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
@@ -32,7 +39,6 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "resolveJsonModule": true,
     "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
-
     "paths": {
       "nightingale-types": ["../../../packages/nightingale-types/src"],
       "nightingale-types/*": ["../../../packages/nightingale-types/src/*"],
@@ -55,5 +61,13 @@
       "nightingale": ["../../../packages/nightingale/src"],
       "nightingale/*": ["../../../packages/nightingale/src/*"]
     }
-  }
+  },
+  "references": [
+    { "path": "../nightingale-types/tsconfig.json" },
+    { "path": "../nightingale-console-output/tsconfig.json" },
+    { "path": "../nightingale-json-formatter/tsconfig.json" },
+    { "path": "../nightingale-console/tsconfig.json" },
+    { "path": "../nightingale-string/tsconfig.json" },
+    { "path": "../nightingale/tsconfig.json" }
+  ]
 }
