--- a/packages/nightingale-levels/tsconfig.build.json
+++ b/packages/nightingale-levels/tsconfig.build.json
@@ -2,16 +2,14 @@
   "extends": "./tsconfig.json",
 
   "compilerOptions": {
-    "noEmit": false,
-    "emitDeclarationOnly": true,
-    "rootDirs": [],
     "rootDir": "src",
+    "noEmit": false,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
     "outDir": "dist",
     "composite": true,
-    "tsBuildInfoFile": "dist/tsbuildinfo",
-    "isolatedModules": false,
-    "declaration": true,
-    "declarationMap": true
+    "tsBuildInfoFile": "dist/tsbuildinfo"
   },
 
   "exclude": ["dist/**", "src/**/*.test.ts", "src/**/__tests__/**"]
