--- a/packages/nightingale-slack/tsconfig.json
+++ b/packages/nightingale-slack/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    /* No emit in default config file. See build config file for config to build declaration files */
-    "noEmit": true,
+    "rootDir": "src",
+    "composite": true,
+    "incremental": true,
+    "noEmit": false,
+    "noEmitOnError": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "node_modules/.cache/tsc",
+    "tsBuildInfoFile": "node_modules/.cache/tsc/tsbuildinfo",
+
     /* No need to check .d.ts files */
     "skipLibCheck": true,
-
-    "rootDirs": ["src"],
 
     "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
@@ -31,7 +38,6 @@
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
-
     "paths": {
       "nightingale-levels": ["../../../packages/nightingale-levels/src"],
       "nightingale-levels/*": ["../../../packages/nightingale-levels/src/*"],
@@ -50,5 +56,11 @@
         "../../../packages/nightingale-raw-formatter/src/*"
       ]
     }
-  }
+  },
+  "references": [
+    { "path": "../nightingale-levels/tsconfig.json" },
+    { "path": "../nightingale-types/tsconfig.json" },
+    { "path": "../nightingale-markdown-formatter/tsconfig.json" },
+    { "path": "../nightingale-raw-formatter/tsconfig.json" }
+  ]
 }
