--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -69,7 +69,7 @@
     ]
   },
   "dependencies": {
-    "@sentry/node": "^6.1.0",
+    "@sentry/node": "7.19.0",
     "nightingale": "12.1.4",
     "nightingale-console": "12.1.4",
     "nightingale-sentry": "12.1.4"
